--- a/src/components/Sidebar/SidebarHeader/SidebarHeader.css
+++ b/src/components/Sidebar/SidebarHeader/SidebarHeader.css
@@ -3,6 +3,7 @@
     padding: 10px;
     display: flex;
     align-items: center;
+    height: 70px;
 }
 
 .username {
@@ -32,17 +33,7 @@
 
 .dropdown__content li {
     width: 100%;
-}
-
-.dropdown__content button {
-    width: 100%;
-    padding: 5px;
     cursor: pointer;
-    font-size: 18px;
-    background: #ffffff;
-    border: none;
-    text-align: center;
-    text-decoration: none;
 }
 
 .dropdown__content a {
@@ -50,11 +41,11 @@
     color: #000;
 }
 
-.dropdown__content a div {
+.dropdown__content div {
     text-align: center;
     padding: 10px;
 }
 
-.dropdown__content a div:hover {
+.dropdown__content div:hover {
     background: #f1f1f1;
 }
