--- a/src/components/SmartScroll/SmartScroll.css
+++ b/src/components/SmartScroll/SmartScroll.css
@@ -1,10 +1,13 @@
 .smart-scroll {
+    width: 100%;
+}
+.smart-scroll-content {
     overflow: auto;
     position: absolute;
     width: 100%;
-    height: 100%;
+    max-height: 100%;
+    bottom: 0;
 }
-
 .scroll-down {
     position: absolute;
     bottom: 10px;
