--- a/client/src/pages/IndexPage/IndexPage.css
+++ b/client/src/pages/IndexPage/IndexPage.css
@@ -1,12 +1,31 @@
-.index {
+.main {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    font-size: 40px;
+}
+.main .title {
+    font-size: 30px;
+    color: white;
+    margin: 5px;
+}
+
+.main .logo {
+    width: 150px;
+    height: 150px;
+}
+
+.main .block-desc {
+    font-size: 30px;
+    color: white;
+    margin-bottom: 300px;
+}
+
+.main .block-desc a {
     color: white;
 }
 
-.index a {
-    color: white;
+.user-list {
+    display: flex;
+    flex-flow: row wrap;
 }
